--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,21 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+.idea/
 
+## server
+/server/node_modules
+/server/dist
+/server/npm-debug.log
+
+## client
 # compiled output
-server/dist
-/tmp
-/out-tsc
+/client/dist
+/client/tmp
 
 # dependencies
 /client/node_modules
-/server/node_modules
-
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
 
 # misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
+/client/npm-debug.log
 
-# System Files
-.DS_Store
-Thumbs.db
+# e2e
+/client/e2e/*.js
+/client/e2e/*.map
