--- a/client/package.json
+++ b/client/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.2.0",
+    "socket.io": "^2.1.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
