--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
+    "@types/node": "^10.11.4",
     "gulp": "^3.9.1",
     "gulp-typescript": "^5.0.0-alpha.3",
     "typescript": "^3.0.3"
