extended type of error, when data directory on server  do not have any data files

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,6 @@
   ],
   "compilerOptions": {
     "target": "es5",
-    "lib": ["es5", "es6", "dom"]
+    "lib": ["es5", "es6", "dom", "es2015.promise"]
   }
 }
