--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "@types/express": "^4.16.0",
     "@types/socket.io": "^1.4.38",
     "express": "^4.16.3",
+    "mongodb": "^3.1.8",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
