--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.3.1",
     "@fortawesome/free-regular-svg-icons": "^5.3.1",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "angular-webstorage-service": "^1.0.2",
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "hammerjs": "^2.0.8",
