--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "@types/express": "^4.16.0",
     "@types/socket.io": "^1.4.38",
+    "body-parser": "^1.18.3",
+    "cookie": "^0.3.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "express-socket.io-session": "^1.3.5",
     "mongodb": "^3.1.8",
+    "mongoose": "^5.3.8",
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
