--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,10 @@
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.5",
     "mongodb": "^3.1.8",
-    "mongoose": "^5.3.8",
-    "socket.io": "^2.1.1"
+    "mongoose": "^5.3.9",
+    "reflect-metadata": "^0.1.12",
+    "socket.io": "^2.1.1",
+    "typegoose": "^5.4.1"
   },
   "devDependencies": {
     "@types/node": "^10.11.4",
