--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/express": "^4.16.0",
     "@types/socket.io": "^1.4.38",
+    "async": "^2.6.1",
     "body-parser": "^1.18.3",
     "cookie": "^0.3.1",
     "express": "^4.16.3",
