--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "hammerjs": "^2.0.8",
+    "ngx-webstorage-service": "^3.1.3",
     "rxjs": "~6.2.0",
     "socket.io": "^2.1.1",
     "zone.js": "~0.8.26"
